<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">
    
    <TextView
        android:id="@+id/product_name_label"
        style="@style/attribute_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_product_name" />
    
    <TextView
        android:id="@+id/product_name"
        style="@style/attribute_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/placeholder_long_product_name" />
    
    <LinearLayout
        style="@style/attribute_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/price_label"
            style="@style/attribute_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_price" />
        
        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/price_pane"
            android:drawableEnd="@drawable/ic_attach_money_white_16dp"
            android:ellipsize="end"
            android:gravity="end|center_vertical"
            android:maxLines="1"
            android:paddingStart="@dimen/padding_little"
            android:textColor="@android:color/white"
            tools:text="199" />
    
    </LinearLayout>
    
    
    <android.support.constraint.ConstraintLayout
        style="@style/attribute_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
        <TextView
            android:id="@+id/quantity_label"
            style="@style/attribute_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    
        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="@dimen/padding_small"
            android:layout_marginStart="@dimen/padding_small"
            android:background="@drawable/quantity_pane"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingEnd="@dimen/padding_small"
            android:paddingStart="@dimen/padding_small"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quantity_label"
            tools:text="1390" />
    
        <Button
            android:id="@+id/decrease_quantity_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_small"
            android:text="@string/btn_decrease_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/quantity"
            app:layout_constraintEnd_toStartOf="@+id/quantity"
            />
    
        <Button
            android:id="@+id/increase_quantity_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_small"
            android:text="@string/btn_increase_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/quantity"
            app:layout_constraintStart_toEndOf="@+id/quantity" />
    
    </android.support.constraint.ConstraintLayout>
    
    <TextView
        android:id="@+id/supplier_name_label"
        style="@style/attribute_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_supplier_name" />
    
    <TextView
        android:id="@+id/supplier_name"
        style="@style/attribute_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/hint_supplier_name" />
    
    <TextView
        android:id="@+id/supplier_phone_label"
        style="@style/attribute_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_supplier_phone_number" />
    
    <TextView
        android:id="@+id/supplier_phone"
        style="@style/attribute_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/hint_supplier_phone_number" />
    
    <Button
        android:id="@+id/call_to_supplier_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_order_text" />

</LinearLayout>