<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_small">
        
        <android.support.design.widget.TextInputLayout
            android:id="@+id/product_name_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="100">
            
            <EditText
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_small"
                android:inputType="text"
                android:maxLength="100"
                android:ellipsize="end"
                android:scrollHorizontally="true"
                android:hint="@string/hint_product_name" />
        </android.support.design.widget.TextInputLayout>
        
        <android.support.design.widget.TextInputLayout
            android:id="@+id/price_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_small"
                android:inputType="number"
                android:drawableEnd="@drawable/ic_attach_money_gray_24dp"
                android:hint="@string/hint_price" />
        </android.support.design.widget.TextInputLayout>
        
        <android.support.design.widget.TextInputLayout
            android:id="@+id/quantity_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <EditText
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_small"
                android:inputType="number"
                android:hint="@string/hint_quantity" />
        </android.support.design.widget.TextInputLayout>
        
        <android.support.design.widget.TextInputLayout
            android:id="@+id/supplier_name_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="100">
            
            <EditText
                android:id="@+id/supplier_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_small"
                android:inputType="text"
                android:maxLength="100"
                android:ellipsize="end"
                android:scrollHorizontally="true"
                android:hint="@string/hint_supplier_name" />
        </android.support.design.widget.TextInputLayout>
        
        <android.support.design.widget.TextInputLayout
            android:id="@+id/supplier_phone_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <EditText
                android:id="@+id/supplier_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_small"
                android:inputType="phone"
                android:hint="@string/hint_supplier_phone_number" />
        </android.support.design.widget.TextInputLayout>
    
    </LinearLayout>
</ScrollView>
